14433
```scala
class Bob[T]
implicit def foo2bar[T](xs: List[T]): Bob[T] = new Bob[T]
var x: Bob[Int] = null
x = List(1,2,3)
```
In scala 2.7 this work as expected.  In trunk:
```scala
<console>:7: error: type mismatch;
 found   : List[Any]
 required: Bob[Int]
       x = List(1,2,3)
               ^
```
I put a test in pending.
